[tool.poetry]
name = "python-validator"
version = "0.0.8"
description = "a data validator like Django ORM"
readme = "README.md"
authors = ["ausaki <ljm51689@gmail.com>"]
license = "MIT"
repository = "https://github.com/ausaki/python-validator"
documentation = "https://ausaki.github.io/python-validator/"
keywords = ['data validator']
packages = [
    { include = "validator" },
]

[tool.poetry.dependencies]
python = ">=3.6.0"
IPy = "*"
six = "^1.15.0"
pytz = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mkdocs = "^1.2.3"
tox = "^3.21.3"
mkdocs-material = "^6.2.7"

[tool.poetry.extras]
tzinfo = ["pytz"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
